Fixed AdminControllerUnitTest